# pornhub-cli

./: README.md  autocomp.py  pyproject.toml
src/ph_cli/: __init__.py  main.py
src/ph_cli/handlers/: requests.py  search.py
src/pornhub_cli/: config.py  main.py  utils.py
src/pornhub_cli/handlers/: requests.py  search.py  video.py
