[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pornhub-cli"
version = "0.1.0"
description = "PornHub scraper and CLI toolkit."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "click",
    "curl-cffi",
    "lxml",
    "cssselect",
    "pyyaml",
    "rich",
]

[project.scripts]
pornhub = "pornhub_cli.main:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
